--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "react-leaflet": "^4.2.1",
         "react-router-dom": "^6.20.0",
         "react-spring": "^9.7.3",
+        "socket.io": "^4.7.2",
+        "socket.io-client": "^4.7.2",
         "tailwind-merge": "^2.0.0",
         "ts-node": "^10.9.1",
         "typescript": "^5.0.4",
