--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@radix-ui/react-menubar": "^1.0.4",
+        "accept-language-parser": "^1.5.0",
         "chalk": "^4.1.2",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
@@ -37,6 +38,7 @@
         "@react-three/cannon": "^6.5.2",
         "@react-three/drei": "^9.88.16",
         "@react-three/fiber": "^8.15.11",
+        "@types/accept-language-parser": "^1.5.6",
         "@types/express": "^4.17.17",
         "@types/leaflet": "^1.9.8",
         "@types/lodash": "^4.14.195",
