--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "lodash": "^4.17.21",
         "lucide-react": "^0.292.0",
         "nodemon": "^2.0.22",
+        "openai": "^4.20.1",
         "react-hot-toast": "^2.4.1",
         "react-leaflet": "^4.2.1",
         "react-router-dom": "^6.20.0",
